<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:backgroundTint="@color/bg"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/_16sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_5sdp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_logo" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                app:srcCompat="@drawable/ic_share" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:srcCompat="@drawable/ic_splash" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mukta_regular"
                        android:text="@string/total_doses"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/_10ssp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mukta_medium"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/_20ssp" />
                </LinearLayout>

                <View
                    android:id="@+id/view2"
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:alpha="0.2"
                    android:background="#043B6E" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mukta_regular"
                        android:text="@string/fully_vaccinated"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/_10ssp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mukta_medium"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/_20ssp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:alpha="0.2"
                android:background="#043B6E"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:fontFamily="@font/mukta_regular"
                android:gravity="center"
                android:text="@string/splash_heading_1"
                android:textColor="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view4" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/mukta_bold"
                android:gravity="center"
                android:text="@string/splash_heading_2"
                android:textColor="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/your_name"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/blue"
                app:hintTextColor="@color/blue"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/digit_alpha"
                    android:fontFamily="@font/mukta_regular"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/city_name"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/blue"
                app:hintTextColor="@color/blue"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                tools:layout_editor_absoluteX="21dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/digit_alpha"
                    android:fontFamily="@font/mukta_regular"
                    android:imeOptions="actionDone"
                    android:inputType="textPostalAddress"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/mukta_bold"
                android:padding="@dimen/_8sdp"
                android:text="@string/capture_image"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/_20sdp"
                app:icon="@drawable/ic_camera"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                tools:layout_editor_absoluteX="0dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/view_bg_bottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/materialButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>