<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg"
            android:paddingStart="@dimen/_16sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_5sdp"
            tools:context=".SavePhotoActivity">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mukta_bold"
                android:text="@string/covid_photo"
                android:textColor="@color/blue"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="@+id/ivBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivBack"
                app:layout_constraintTop_toTopOf="@+id/ivBack" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/mukta_medium"
                android:gravity="center"
                android:text="@string/thank_you"
                android:textColor="@color/blue"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_quotes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_320sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:alpha="0.7"
                        android:background="@color/green"
                        android:elevation="@dimen/_1sdp"
                        android:fontFamily="@font/mukta_bold"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/got_it"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp" />

                    <ImageView
                        android:id="@+id/iv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@id/tv"
                        android:src="@drawable/ic_logo"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:alpha="0.7"
                        android:background="@color/orange"
                        android:fontFamily="@font/mukta_bold"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/get_it"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp" />
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_green"
                android:fontFamily="@font/mukta_bold"
                android:padding="@dimen/_8sdp"
                android:text="@string/share_whatsapp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/_20sdp"
                app:icon="@drawable/ic_whatsapp"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mukta_bold"
                android:padding="@dimen/_8sdp"
                android:text="@string/save_photo"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/_20sdp"
                app:icon="@drawable/ic_download"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialButton" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/view_bg_bottom"
                app:layout_constraintTop_toBottomOf="@id/materialButton2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>